--- a/package.json
+++ b/package.json
@@ -6,5 +6,7 @@
       "express": "2.5.0"
     , "less": ">= 0.0.1"
     , "ejs": ">= 0.0.1"
+	, "mongoose": ">= 2.3.9"
+	, "socket.io": ">= 0.8.6"
   }
 }
